--- a/page1.htm
+++ b/page1.htm
@@ -486,13 +486,17 @@
             z-index: 4;
         }
     </style>
+    <link href="style.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    <script src="scripts.js"></script>
 </head>
 <body>
     <table align="center" border="0" cellpadding="0" cellspacing="0">
         <tbody>
             <tr>
                 <td class="mainlogo">
-                    <a href="http://putlocker.is/" title="putlocker.is"><img src="Featured%20Movies%20_%20Putlocker%20-%20Watch%20Movies%20Online%20Free-filer/mainlogo.jpg" alt="putlocker.is" /></a><div id="search">
+                    <a href="http://putlocker.is/" title="putlocker.is"><img src="Featured%20Movies%20_%20Putlocker%20-%20Watch%20Movies%20Online%20Free-filer/mainlogo.jpg" alt="putlocker.is" /></a>
+                    <div id="search">
                         <form method="GET" action="http://putlocker.is/search/index.php" style="margin:0;padding:0;">
                             <table align="center">
                                 <tbody>
@@ -712,16 +716,16 @@
         })();
     </script>
     <script>
-(function (d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=535074386506703";
-    fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=535074386506703";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
     <!-- Histats.com  START  (aync) -->
     <script type="text/javascript">
-var _Hasync = _Hasync || [];
+        var _Hasync = _Hasync || [];
         _Hasync.push(['Histats.start', '1,2365973,4,0,0,0,00010000']);
         _Hasync.push(['Histats.fasi', '1']);
         _Hasync.push(['Histats.track_hits', '']);
