--- a/page5.htm
+++ b/page5.htm
@@ -486,6 +486,9 @@
             z-index: 4;
         }
     </style>
+    <link href="style.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    <script src="scripts.js"></script>
 </head>
 <body>
     <table align="center" border="0" cellpadding="0" cellspacing="0">
